--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,31 +6,41 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">
+    You can also find my articles on
+    <a href="{{ site.author.googlescholar }}">my Google Scholar profile</a>.
+  </div>
 {% endif %}
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
-  {% for category in site.publication_category  %}
+  {% comment %}
+    先按 order 排好（数字越小越靠前）。
+    如果有些条目没有 order，Liquid 会把它们按字符串/空值排序，
+    建议所有 publications 都写上 order。
+  {% endcomment %}
+  {% assign sorted_pubs = site.publications | sort: "order" %}
+
+  {% for category in site.publication_category %}
     {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
+
+    {% for post in sorted_pubs %}
       {% if post.category != category[0] %}
         {% continue %}
       {% endif %}
+
       {% unless title_shown %}
         <h2>{{ category[1].title }}</h2><hr />
         {% assign title_shown = true %}
       {% endunless %}
+
       {% include archive-single.html %}
     {% endfor %}
   {% endfor %}
 {% else %}
-  {% for post in site.publications reversed %}
+  {% assign sorted_pubs = site.publications | sort: "order" %}
+  {% for post in sorted_pubs %}
     {% include archive-single.html %}
   {% endfor %}
 {% endif %}
-
-
-
